--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-flask 
-flask-cors
-mysql-connector-python
-requirements.txt
+Flask==3.1.2
+Flask-Cors==6.0.2
+mysql-connector-python==8.1.0
+gunicorn==21.2.0
+python-dotenv==1.0.0
+
